IT-78 Improve mobile UI. - Featured projects now use a card-style UI - Vendor list changed to a scrolling track - Adjusted various elements to fit mobile better - Project photos now fit correctly on mobile and can be enlarged

--- a/_sass/_videos.scss
+++ b/_sass/_videos.scss
@@ -327,10 +327,17 @@ $marketing-site-three-up-width: 1200px;
 .gallery-item {
     width:  450px;
     height: 450px;
-    margin-bottom: 10px;
+    //margin-bottom: 10px;
     object-fit: cover;
-}
 
+}
+// Mobile Specific border rounding
+@media (max-width: 768px) {
+  .gallery-item {
+  border-radius: 5px;
+  overflow: hidden;
+  }
+}
 // Parallax
 
 .parallax {
@@ -474,6 +481,26 @@ $marketing-site-three-up-width: 1200px;
       grid-template-columns: repeat(auto-fill, minmax(120px, 1fr));
     }
   }
+// Mobile Specific brand scroll bar
+@media (max-width: 768px) {
+  .brands-container {
+    display: flex;
+    overflow-x: auto; 
+    //gap: 20px;
+    padding-bottom: 20px; 
+      
+    scrollbar-width: none;  
+  }
+
+  .brands-container::-webkit-scrollbar {
+    display: none; 
+  }
+
+  .brand {
+    /* Shows 2.5 items */
+    flex: 0 0 calc(40% - 20px); 
+  }
+}
 
   /* Added below from chatgpt to make social work on mobile */
 .social-icons {
@@ -626,6 +653,19 @@ $marketing-site-three-up-width: 1200px;
   object-fit: cover;
   display: block;
 }
+// Mobile specific project photos 
+@media (max-width: 768px) {
+
+  .photo-section .img-fit img {
+  width: 100%;
+  height: auto;
+  object-fit: cover;
+  display: block;
+  border-radius: 5px;
+  overflow: hidden;
+}
+
+}
 
 .featured-projects {
   padding: 70px 20px;
@@ -676,13 +716,49 @@ $marketing-site-three-up-width: 1200px;
   }
 }
 
+// Mobile specific changes. Card like UI.
 @media (max-width: 640px) {
+  .featured-projects {
+    //background-color: #f4f6f9; 
+    padding: 40px 20px;
+  }
+
   .featured-project-grid {
-    grid-template-columns: 1fr;
+    display: flex;
+    flex-direction: column; // Stacks the cards vertically
+    gap: 16px;
+  }
+
+  .project-card {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    background-color: #f4f6f9;
+    border-radius: 12px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.08);
+    overflow: hidden; 
+    max-height: 110px;
   }
 
   .project-card img {
-    height: 220px;
+    width: 60%; 
+    min-width: 60%;
+    height: 110px; 
+    //padding: 16px;
+  }
+
+  .project-info {
+    padding: 16px;
+    margin-top: 0; 
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
+
+  .project-title {
+    font-size: 1rem;
+    font-weight: bold;
+    color: #111;
   }
 }
 
