--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -162,7 +162,7 @@ body {
 
 h1 {
   font-size: 50px;
-  word-break: break-all;
+  word-break: normal;
 }
 
 .row {
@@ -257,23 +257,89 @@ h1 {
    padding: 0px 0px 0px 0px;
    }
 
+   // Mobile specific banner changes
+   @media (max-width: 768px) {
+  .home_products_div {
+    margin: 0px 0px 0px 0px;
+    height: 125px; /* half the original height */
+    background-size: cover;
+    background-position: center; /* keeps the center of the image visible */
+  }
+
+  .home_products_div .row {
+    margin-top: 0px;
+    height: 125px !important; /* match the reduced height */
+  }
+
+  .home_products_div h2 {
+    text-align: center;
+  -webkit-text-stroke: 1px black;
+  paint-order: stroke fill;
+  color: white;
+  }
+}
+
   /* Div banner 2 */
 .home_services_div {
    height: 250px;
    background-image: url("https://d1wfqjcm45bc90.cloudfront.net/our-services.jpg");
    object-fit: cover;
+   font-family: 'Quicksand', sans-serif;
    margin: 50px 0px 50px 0px;
    padding: 0px 0px 0px 0px;
    }
+ // Mobile specific banner changes
+  @media (max-width: 768px) {
+  .home_services_div {
+    margin: 0px 0px 0px 0px;
+    height: 125px; /* half the original height */
+    background-size: cover;
+    background-position: center; /* keeps the center of the image visible */
+  }
+
+  .home_services_div .row {
+    margin-top: 0px;
+    height: 125px !important; /* match the reduced height */
+  }
+
+  .home_services_div h2 {
+    text-align: center;
+    -webkit-text-stroke: 1px black;
+    paint-order: stroke fill;
+    color: white;
+  }
+}
 
   /* Div banner 3 */
 .home_flipcard_div {
    height: 250px;
    background-image: url("https://d1wfqjcm45bc90.cloudfront.net/above-flipcard.jpg");
    object-fit: cover;
+   font-family: 'Quicksand', sans-serif;
    margin: 50px 0px 50px 0px;
    padding: 0px 0px 0px 0px;
    }
+ // Mobile specific banner changes
+  @media (max-width: 768px) {
+  .home_flipcard_div {
+    margin: 0px 0px 0px 0px;
+    height: 125px; /* half the original height */
+    background-size: cover;
+    background-position: center; /* keeps the center of the image visible */
+  }
+
+  .home_flipcard_div .row {
+    margin-top: 0px;
+    height: 125px !important; /* match the reduced height */
+  }
+
+  .home_flipcard_div h2 {
+    text-align: center;
+    -webkit-text-stroke: 2px black;
+    paint-order: stroke fill;
+    color: white;
+  }
+}
 
   /* Div banner 3 */
 .home_photos_div {
@@ -467,9 +533,9 @@ section {padding:0rem;}
 /* It means on screens that are  640px or less, set logo image width 50% and margin and padding auto means on center.*/
 
 @media screen and (max-width: 640px){
-.site-logo img {
-width: 50% !important;
-}
+  .site-logo img {
+  width: 50% !important;
+  }
 }
 
 
